docs/apache-airflow-providers-google/12.0.0/_sources/_api/tests/system/google/cloud/dataflow/example_dataflow_yaml/index.rst.txt
:py:mod:`tests.system.google.cloud.dataflow.example_dataflow_yaml`
==================================================================

.. py:module:: tests.system.google.cloud.dataflow.example_dataflow_yaml

.. autoapi-nested-parse::

   Example Airflow DAG for Google Cloud Dataflow YAML service.

   Requirements:
       This test requires ``gcloud`` command (Google Cloud SDK) to be installed on the Airflow worker
       <https://cloud.google.com/sdk/docs/install>`__



Module Contents
---------------

.. py:data:: PROJECT_ID

   

.. py:data:: ENV_ID

   

.. py:data:: DAG_ID
   :value: 'dataflow_yaml'

   

.. py:data:: REGION
   :value: 'europe-west2'

   

.. py:data:: DATAFLOW_YAML_JOB_NAME

   

.. py:data:: BQ_DATASET

   

.. py:data:: BQ_INPUT_TABLE

   

.. py:data:: BQ_OUTPUT_TABLE

   

.. py:data:: DATAFLOW_YAML_PIPELINE_FILE_URL
   :value: 'gs://airflow-system-tests-resources/dataflow/yaml/example_beam_yaml_bq.yaml'

   

.. py:data:: BQ_VARIABLES

   

.. py:data:: BQ_VARIABLES_DEF

   

.. py:data:: INSERT_ROWS_QUERY

   

.. py:data:: create_bq_dataset

   

.. py:data:: test_run

   

