docs/apache-airflow-providers-google/14.0.0/_sources/_api/tests/system/google/cloud/dataflow/example_dataflow_yaml/index.rst.txt
tests.system.google.cloud.dataflow.example_dataflow_yaml
========================================================

.. py:module:: tests.system.google.cloud.dataflow.example_dataflow_yaml

.. autoapi-nested-parse::

   Example Airflow DAG for Google Cloud Dataflow YAML service.

   Requirements:
       This test requires ``gcloud`` command (Google Cloud SDK) to be installed on the Airflow worker
       <https://cloud.google.com/sdk/docs/install>`__



Attributes
----------

.. autoapisummary::

   tests.system.google.cloud.dataflow.example_dataflow_yaml.PROJECT_ID
   tests.system.google.cloud.dataflow.example_dataflow_yaml.ENV_ID
   tests.system.google.cloud.dataflow.example_dataflow_yaml.DAG_ID
   tests.system.google.cloud.dataflow.example_dataflow_yaml.REGION
   tests.system.google.cloud.dataflow.example_dataflow_yaml.DATAFLOW_YAML_JOB_NAME
   tests.system.google.cloud.dataflow.example_dataflow_yaml.BQ_DATASET
   tests.system.google.cloud.dataflow.example_dataflow_yaml.BQ_INPUT_TABLE
   tests.system.google.cloud.dataflow.example_dataflow_yaml.BQ_OUTPUT_TABLE
   tests.system.google.cloud.dataflow.example_dataflow_yaml.DATAFLOW_YAML_PIPELINE_FILE_URL
   tests.system.google.cloud.dataflow.example_dataflow_yaml.SCHEMA
   tests.system.google.cloud.dataflow.example_dataflow_yaml.BQ_VARIABLES
   tests.system.google.cloud.dataflow.example_dataflow_yaml.BQ_VARIABLES_DEF
   tests.system.google.cloud.dataflow.example_dataflow_yaml.INSERT_ROWS_QUERY
   tests.system.google.cloud.dataflow.example_dataflow_yaml.create_bq_dataset
   tests.system.google.cloud.dataflow.example_dataflow_yaml.test_run


Module Contents
---------------

.. py:data:: PROJECT_ID

.. py:data:: ENV_ID

.. py:data:: DAG_ID
   :value: 'dataflow_yaml'


.. py:data:: REGION
   :value: 'europe-west2'


.. py:data:: DATAFLOW_YAML_JOB_NAME
   :value: ''


.. py:data:: BQ_DATASET
   :value: ''


.. py:data:: BQ_INPUT_TABLE
   :value: ''


.. py:data:: BQ_OUTPUT_TABLE
   :value: ''


.. py:data:: DATAFLOW_YAML_PIPELINE_FILE_URL
   :value: 'gs://airflow-system-tests-resources/dataflow/yaml/example_beam_yaml_bq.yaml'


.. py:data:: SCHEMA

.. py:data:: BQ_VARIABLES

.. py:data:: BQ_VARIABLES_DEF

.. py:data:: INSERT_ROWS_QUERY
   :value: "INSERT . VALUES ('John Doe', 900, 'USA'), ('Alice Storm', 1200, 'Australia'),('Bob Max', 1000,...


.. py:data:: create_bq_dataset

.. py:data:: test_run

